Use G1GC for Pterodactyl server